<resources>
    <string name="app_name">Dislexia</string>
    <string name="nombreUsuario">Usuario</string>
    <string name="password">Contrasena</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="nombrePersona">Nombre</string>
    <string name="apellidoPersona">Apellido</string>
    <string name="dni">Dni</string>
    <string name="edad">Edad</string>
    <string name="title_activity_registrar">Registrar</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="sexo">Sexo</string>
    <string name="especialista">Especialista?</string>
    <string name="especialidad">Especialidad</string>
    <string name="matricula">Matricula</string>
    <string name="email">Email</string>
    <string name="niveles">Niveles</string>
    <string name="P">p</string>
    <string name="D">d</string>
    <string name="Q">q</string>
    <string name="B">b</string>
    <string name="buscadorEspecialistaNombre">Ingrese nombre de nino </string>
    <string name="buscadorEspecialistaApellido">Ingrese Apellido de nino </string>
    <string name="buscar">Buscar</string>
    <string name="resultado">Resultado</string>
    <string name="iniciar">Iniciar</string>
    <string name="arrastre">Arrastre la letra a la figura que corresponde</string>
    <string name="buscarNino">Buscar Nino</string>
    <string name="actividad">Actividad</string>
    <string name="nivel">Nivel</string>
    <string name="graficofallas">Grafico de fallas</string>
    <string name="graficotiempo">Grafico de Tiempo</string>
    <string name="title_activity_nivel1__id_palabrasy_pseudopalabras">
        Nivel1_IdPalabrasyPseudopalabras
    </string>
    <string name="nivel1idpalabras">Seleccione la opcion correcta</string>
    <string name="torta">TORTA</string>
    <string name="torota">TOROTA</string>
    <string name="puerta">POMELO</string>
    <string name="pucata">PONEOL</string>
    <string name="pelota">PELOTA</string>
    <string name="pemota">PALETO</string>
    <string name="manzana">MANZANA</string>
    <string name="mansala">MAZANAN</string>
    <string name="corazon">CORAZON</string>
    <string name="catalon">CONAZOR</string>
    <string name="television">CONEJO</string>
    <string name="tecnotisor">CONEGO</string>
    <string name="familiapalabras">Haga clic en las palabras que pertenecen a la familia</string>
    <string name="Abrigar">Abrigar</string>
    <string name="desastre">Desastre</string>
    <string name="abrigado">Abrigado</string>
    <string name="abriguito">Abriguito</string>
    <string name="abrir">Abrir</string>
    <string name="abrochar">Abrochar</string>
    <string name="desabrigado">Desabrigado</string>
    <string name="abrigo">Abrigo</string>
    <string name="domador">Domador</string>
    <string name="indomable">Indomable</string>
    <string name="dorado">Dorado</string>
    <string name="domable">Domable</string>
    <string name="domar">Domar</string>
    <string name="indoloro">Indoloro</string>
    <string name="domino">Domino</string>
    <string name="domado">Domado</string>
    <string name="util">Util</string>
    <string name="usado">Usado</string>
    <string name="inutil">Inutil</string>
    <string name="utilizable">Utilizable</string>
    <string name="utilmente">Utilmente</string>
    <string name="unico">Unico</string>
    <string name="universo">Universo</string>
    <string name="utilizar">Utilizar</string>
    <string name="calificado">Calificado</string>
    <string name="calado">Calado</string>
    <string name="descalificar">Descalificar</string>
    <string name="desclasificado">Desclasificado</string>
    <string name="descalificado">Descalificado</string>
    <string name="calificacion">Calificacion</string>
    <string name="caballero">Caballero</string>
    <string name="calificar">Calificar</string>
</resources>
