<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registar"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="32dp"
        android:text="@string/registrar"
        android:textSize="24sp"

         />

    <EditText
        android:id="@+id/nombreTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/nombrePersona"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/apellidoTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nombreTxt"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="174dp"
        android:ems="10"
        android:hint="@string/apellidoPersona"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/edadTxt"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nombreTxt"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="-44dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/edad"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
         />

    <EditText
        android:id="@+id/dniTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/apellidoTxt"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="174dp"
        android:ems="10"
        android:hint="@string/dni"
        android:inputType="number" />

    <TextView
        android:id="@+id/sexoTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dniTxt"
        android:layout_alignParentStart="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sexo"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/emailTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sexoTxt"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"

        />

    <EditText
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailTxt"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="9dp"

        android:text="@string/especialista"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/especialistaCb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="228dp" />
    <Button
        android:id="@+id/botonRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="272dp"
        android:onClick="registrarBoton"
        android:text="@string/registrar"

        android:textColor="@drawable/txt_boton_redondeado"
        android:background="@drawable/fondo_boton_redondeado"
        android:layout_below="@+id/viewEspecialista" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewEspecialista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/especialistaCb"
        android:layout_marginStart="24dp"

        android:layout_marginTop="9dp">

        <EditText
            android:id="@+id/especialidadTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/especialidad"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/matriculaTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/matricula"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/especialidadTxt"
            tools:layout_editor_absoluteX="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/dniTxt"
        tools:layout_editor_absoluteX="98dp"
        android:layout_below="@+id/sexoTxt" />

    <RadioButton
        android:id="@+id/femeninorb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dniTxt"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:layout_toEndOf="@+id/sexoTxt"
        android:text="@string/femenino" />

    <RadioButton
        android:id="@+id/masculinorb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dniTxt"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="113dp"
        android:layout_toEndOf="@+id/femeninorb"
        android:text="@string/masculino" />




</RelativeLayout>